--- a/src/views/partials/headLinks.ejs
+++ b/src/views/partials/headLinks.ejs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style-home.css">
     <link rel="stylesheet" href="./css/style-carritob.css">
+    <link rel="stylesheet" href="./css/style-inicia-sesion.css">
+    <link rel="stylesheet" href="./css/style-producto.css">
+    <link rel="stylesheet" href="./css/style-registro.css">
 
     <!-- Links Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
