--- a/src/views/partials/headerMain.ejs
+++ b/src/views/partials/headerMain.ejs
@@ -5,9 +5,9 @@
             <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/group.svg"
                         alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
+            <div class="icon-cart"><a href="/products/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
         </section>
         <section class="subheader">
-            <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
-            <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
+            <a class="crear-cuenta" href="/users/registro">CREAR CUENTA</a>
+            <a class="iniciar-sesion" href="/users/inicia-sesion">INICIAR SESION</a>
         </section>
