--- a/src/views/partials/headerSidebar.ejs
+++ b/src/views/partials/headerSidebar.ejs
@@ -8,8 +8,8 @@
  </label>
  <div id="sidebarMenu">
    <ul class="sidebarMenuInner">
-     <li><a href="/inicia-sesion">Mi Cuenta</a></li>
-     <li><a href="/detalle-producto">Guarderias</a></li>
+     <li><a href="/users/inicia-sesion">Mi Cuenta</a></li>
+     <li><a href="/products/detalle-producto">Guarderias</a></li>
      <li><a href="/">Nosotros</a></li>
      <li><a href="#">Contacto</a></li>
      <li><a href="#">FAQ</a></li>
