--- a/src/views/partials/headLinks.ejs
+++ b/src/views/partials/headLinks.ejs
@@ -6,12 +6,12 @@
     <link rel="icon" type="image/x-icon" href="/img/Group.svg">
 
     <!-- Links CSS -->
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style-home.css">
-    <link rel="stylesheet" href="./css/style-carritob.css">
-    <link rel="stylesheet" href="./css/style-inicia-sesion.css">
-    <link rel="stylesheet" href="./css/style-producto.css">
-    <link rel="stylesheet" href="./css/style-registro.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style-home.css">
+    <link rel="stylesheet" href="../css/style-carritob.css">
+    <link rel="stylesheet" href="../css/style-inicia-sesion.css">
+    <link rel="stylesheet" href="../css/style-producto.css">
+    <link rel="stylesheet" href="../css/style-registro.css">
 
     <!-- Links Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
